--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/Ashampoo/imageproxy:latest
+          tags: ghcr.io/ashampoo/imageproxy:latest
